--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pVn-Jg-Pcn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j9J-FH-zqh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Test" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="Test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,27 +22,55 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dwu-MA-n3j">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dealListingCell" id="dwu-MA-n3j">
                                         <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dwu-MA-n3j" id="uKv-iy-HvO">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uv1-dS-DCF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="Food22449.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="5z1-ii-QAV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="120" id="4OW-Fh-Y2Z"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szs-Kt-p7u">
+                                                    <rect key="frame" x="0.0" y="75" width="375" height="45"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoy rich and tasty food from Cafe Truffle! Get Chicken Burger and Vanilla shake at ₹99 instead of ₹180" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-BQ-LeB">
+                                                            <rect key="frame" x="10" y="0.0" width="355" height="45"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="Pjt-BQ-LeB" secondAttribute="bottom" id="7g8-w0-2GH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Pjt-BQ-LeB" secondAttribute="trailing" constant="10" id="GY9-pv-Ixs"/>
+                                                        <constraint firstAttribute="height" constant="45" id="SnU-qO-EnA"/>
+                                                        <constraint firstItem="Pjt-BQ-LeB" firstAttribute="top" secondItem="szs-Kt-p7u" secondAttribute="top" id="t7j-BW-BX8"/>
+                                                        <constraint firstItem="Pjt-BQ-LeB" firstAttribute="leading" secondItem="szs-Kt-p7u" secondAttribute="leading" constant="10" id="vII-90-olc"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="uv1-dS-DCF" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" id="0qt-eb-4wI"/>
-                                                <constraint firstAttribute="trailing" secondItem="uv1-dS-DCF" secondAttribute="trailing" id="A7D-GM-R33"/>
-                                                <constraint firstItem="uv1-dS-DCF" firstAttribute="top" secondItem="uKv-iy-HvO" secondAttribute="top" id="GrB-o5-ue3"/>
-                                                <constraint firstAttribute="bottom" secondItem="uv1-dS-DCF" secondAttribute="bottom" constant="40" id="vlX-R0-dSV"/>
+                                                <constraint firstAttribute="trailing" secondItem="szs-Kt-p7u" secondAttribute="trailing" id="5ge-nc-WuT"/>
+                                                <constraint firstItem="szs-Kt-p7u" firstAttribute="bottom" secondItem="5z1-ii-QAV" secondAttribute="bottom" id="Ch9-ZP-edP"/>
+                                                <constraint firstItem="5z1-ii-QAV" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" id="E4s-ED-aeo"/>
+                                                <constraint firstAttribute="trailing" secondItem="5z1-ii-QAV" secondAttribute="trailing" id="bGh-TD-neW"/>
+                                                <constraint firstItem="szs-Kt-p7u" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" id="ig4-B5-FAs"/>
+                                                <constraint firstItem="5z1-ii-QAV" firstAttribute="top" secondItem="uKv-iy-HvO" secondAttribute="top" id="ise-Ty-gTp"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="xeZ-2s-EKn"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1l5-YU-WjQ"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -58,7 +86,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="240.80000000000001" y="118.29085457271366"/>
+            <point key="canvasLocation" x="116" y="22.938530734632685"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Tpc-IE-fyw">
+            <objects>
+                <viewController id="wsw-En-rJQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sm0-8F-9g6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Food22449.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="onM-EA-TqW">
+                                <rect key="frame" x="0.0" y="20" width="375" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="tga-DB-PLT"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ohj-6H-OuN" firstAttribute="trailing" secondItem="onM-EA-TqW" secondAttribute="trailing" id="AZa-Yi-UYT"/>
+                            <constraint firstItem="onM-EA-TqW" firstAttribute="top" secondItem="Ohj-6H-OuN" secondAttribute="top" id="EIO-Mc-DVZ"/>
+                            <constraint firstItem="onM-EA-TqW" firstAttribute="leading" secondItem="Ohj-6H-OuN" secondAttribute="leading" id="lVb-1j-W6V"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ohj-6H-OuN"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="9ic-Ct-RND"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rm2-S8-oaz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="394"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="acO-1K-dAA">
@@ -101,7 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xah-kn-tCJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-535" y="-383"/>
+            <point key="canvasLocation" x="-745" y="-485"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Rj4-uA-cK9">
@@ -115,6 +172,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="cxB-Jx-ZSL"/>
+                        <segue destination="wsw-En-rJQ" kind="relationship" relationship="viewControllers" id="j5z-Pz-vXk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k6u-Jb-Udg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -122,4 +180,7 @@
             <point key="canvasLocation" x="-794" y="210"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Food22449.jpeg" width="375" height="120"/>
+    </resources>
 </document>
